nashorn/test/script/basic/es6/const-redeclare-extra.js.EXPECTED
SyntaxError: test/script/basic/es6/const-redeclare-extra.js#36:8<eval>@2:3:8 Variable "x" has already been declared
    var x = {};
        ^
SyntaxError: test/script/basic/es6/const-redeclare-extra.js#36:8<eval>@4:2:8 Variable "x" has already been declared
    var x = 2;
        ^
SyntaxError: test/script/basic/es6/const-redeclare-extra.js#36:8<eval>@4:2:13 Variable "x" has already been declared
    function x () {}
             ^
